# secret-sdk-proto

./: Cargo.toml  README.md  build.rs
scripts/: get_proto.sh
src/: lib.rs
src/prost/secret/: SECRET_COMMIT  secret.compute.v1beta1.rs  secret.emergencybutton.v1beta1.rs  secret.intertx.v1beta1.rs  secret.registration.remote_attestation.v1beta1.rs  secret.registration.v1beta1.rs
