[package]
name = "secret-sdk-proto"
authors = ["Kent"]
description = "Secret Network protobuf struct definitions"
version = "0.1.0"
edition = "2021"

[features]
default = ["secret", "cosmos-sdk", "protoc"]
secret = []
cosmos-sdk = ["dep:cosmos-sdk-proto"]
protoc = ["dep:protoc-prebuilt"]

[dependencies]
cosmos-sdk-proto = { version = "0.20.0", default-features = false, optional = true }
bytes = "1.5"
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
prost-build = "0.12.3"
protoc-prebuilt = { version = "0.2.0", optional = true }
