[package]
name = "secret-sdk-proto"
version = "0.0.0"
authors = ["Kent"]
license = "Apache-2.0"
repository = "https://github.com/kent-3/secret-sdk-proto"
description = "Secret Network protobuf struct definitions"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.72"

[features]
default = ["secret", "cosmos-sdk", "protoc"]
secret = []
cosmos-sdk = ["dep:cosmos-sdk-proto"]
protoc = ["dep:protoc-prebuilt"]

[dependencies]
cosmos-sdk-proto = { version = "0.20.0", default-features = false, optional = true }
bytes = "1.5"
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
prost-build = "0.12.3"
protoc-prebuilt = { version = "0.2.0", optional = true }
