[package]
name = "secret-sdk-proto"
version = "0.0.0"
authors = ["Kent"]
license = "Apache-2.0"
repository = "https://github.com/kent-3/secret-sdk-proto"
description = "Secret Network protobuf struct definitions"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.72"

[features]
default = ["grpc-transport"]
secret = []
grpc = ["tonic"]
grpc-transport = ["grpc", "tonic/transport"]

[dependencies]
prost = "0.12"
prost-types = "0.12"
cosmos-sdk-proto = { version = "0.21", default-features = false }

# Optional dependencies
tonic = { version = "0.11", optional = true, default-features = false, features = ["codegen", "prost"] }
